--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,7 +1,7 @@
 /* ==========================================================================
    FOOTER
    ========================================================================== */
-
+/*
 .page__footer {
   @include clearfix;
   float: left;
@@ -35,6 +35,7 @@
       max-width: $x-large;
     }
   }
+
 
   a {
     color: inherit;
@@ -90,3 +91,4 @@
     }
   }
 }
+*/
